--- a/src/index.html
+++ b/src/index.html
@@ -4,19 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework 10</title>
+    <title>Homework 11</title>
   </head>
   <body>
-    <form class="search-form" id="search-form">
-      <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
-      <button type="submit">Search</button>
-    </form>
+    <div class="container">
+      <form class="search-form" id="search-form">
+        <input type="text" name="searchQuery" autocomplete="off" placeholder="Пошук зображень..." />
+        <button type="submit">Пошук</button>
+      </form>
+      
+      <div class="gallery">
+        <!-- Картки зображень -->
+      </div>
+      
+      <button type="button" class="load-more" data-action="load-more">Завантажити ще</button>
 
-    <div class="gallery">
-      <!-- Картки зображень -->
-    </div>
-
-    <button type="button" class="load-more">Load more</button>  
+    </div> 
 
     <script src="index.js" type="module"></script>
   </body>
